--- a/index.html
+++ b/index.html
@@ -1,25 +1,37 @@
 <html>
 <head>
-<title>feather</title><link rel="stylesheet" href="/static/css/common.css?v=a0a6392" type="text/css" /><link rel="stylesheet" href="/static/css/index.css?v=d41d8cd" type="text/css" /><script src="/static/js/feather.js?v=2b6071c"></script><script>require.config={"baseurl":"/static/js","rules":[[/^([^:]+)?\:((?:[^\/]+\/)*)((?:(?!\.js).)+?)(\.js)?$/,function (_0, _1, _2, _3, _4){                    return (_1 ? _1 + '/' : '') + 'mod/' + _2 + _3 + (_4 ? _4 : ('/' + _3 + '.js'));                }],[/^.+$/,function (all){                    return /\.([^\.]+)$/.test(all) ? all : (all + '.js');                }]],"charset":"utf-8","map":{},"deps":{},"domain":""}</script><script>require.mergeConfig({"map":{"/static/js/index.js?v=f4989ce":["/static/js/index.js"],"/static/js/mod/jquery/jquery.js?v=f2f3c86":["/static/js/mod/jquery/jquery.js"]},"deps":{}})</script></head>
+<title>feather</title><link rel="stylesheet" href="/static/combine/235309aec1.css" type="text/css" /><script src="/static/js/feather.js?version=2b6071c"></script><script>require.config={"baseurl":"/static/js","rules":[[/^([^:]+)?\:((?:[^\/]+\/)*)((?:(?!\.js).)+?)(\.js)?$/,function (_0, _1, _2, _3, _4){                    return (_1 ? _1 + '/' : '') + 'mod/' + _2 + _3 + (_4 ? _4 : ('/' + _3 + '.js'));                }],[/^.+$/,function (all){                    return /\.([^\.]+)$/.test(all) ? all : (all + '.js');                }]],"charset":"utf-8","map":{},"deps":{},"domain":""}</script><script>require.mergeConfig({"map":{"/static/js/index.js?version=5220480":["/static/js/index.js"],"/static/js/mod/jquery/jquery.js?version=f2f3c86":["/static/js/mod/jquery/jquery.js"],"/static/js/mod/highlighter/highlighter.js?version=b8fbb3d":["/static/js/mod/highlighter/highlighter.js"],"/static/js/mod/highlighter/highlighter.css?version=c77bdba":["/static/js/mod/highlighter/highlighter.css"]},"deps":{"/static/js/mod/highlighter/highlighter.js":["/static/js/mod/highlighter/highlighter.css"]}})</script></head>
 
 <body>
 <div id="header">
 	<div class="s">
-		<em class="desc">an industrialized framework for frontend baesd on <a href="http://github.com/fis">fis</a></em>
+		<!--<em class="desc">an industrialized framework for frontend baesd on <a href="http://github.com/fis">fis</a></em>-->
 		<h1 class="logo">
 			feather
 		</h1>
 	</div>
 	
 	<ul class="project">
-		<li><a href="javascript:void(0);" data-href="/pagelet/feather/feather.html">feather</a></li>
-		<li><a href="javascript:void(0);" data-href="/pagelet/feather-ui/feather-ui.html">feather-ui</a></li>
+		<li><a href="#feather" data-project="feather" data-target="feather-nav">feather</a></li>
+		<li><a href="#feather" data-project="feather-ui" data-target="feather-ui-nav">feather-ui</a></li>
 	</ul>
 </div>
 
 <div id="content">
-	<div id="left"></div>
-	<div id="right"></div>	
+	<div id="left">
+		<ul class="nav" id="feather-nav" data-project="feather">
+			<li><a href="#feather" data-index="index" data-href="/pagelet/feather/index">简单说两句</a></li>
+			<li><a href="#feather/start" data-index="start" data-href="/pagelet/feather/start">Start!!!</a></li>
+			<li><a href="#feather/config" data-index="config" data-href="/pagelet/feather/config">常用配置</a></li>
+		</ul>
+		<ul class="nav" id="feather-ui-nav" data-project="feather-ui">
+			<li><a href="javascript:void(0);" data-href="/pagelet/feather/desc">介绍</a></li>
+			<li><a href="javascript:void(0);" data-href="/pagelet/feather"></a></li>
+		</ul>
+	</div>
+	<div id="right">
+		
+	</div>	
 </div>
 
 <script>
