--- a/pagelet/feather/index.html
+++ b/pagelet/feather/index.html
@@ -21,4 +21,5 @@
 	<li>fis自带的md5文件名版本号外，同时支持启用querystring形式的文件md5版本号模式。</li>
 	<li>新增项目脚手架命令-init，一键创建项目</li>
 	<li>其他：自动删除css中同域资源domain，动态domain支持，静态资源baseurl设置等等。</li>
+	<li class="color-red">注：feather对static目录下，任意third目录不做任何处理。</li>
 </ul>
