--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 
 <body>
 <div id="header">
-	<a class="title" href="" title="go to github">feather</a>
+	<a class="title" href="https://github.com/feather-ui/feather" title="go to github">feather</a>
 	<span class="desc">an industrialized framework for frontend baesd on <a href="http://github.com/fis" class="link">fis</a>. simple quick</span>
 </div>
 <div id="content">
 	<a class="project fs-24 color-white" href="page/feather.html">feather</a>
-	<a class="project fs-24 color-white" href="page/feater-ui.html">feather-ui</a>
+	<a class="project fs-24 color-white" href="https://github.com/feather-ui/feather-ui">feather-ui</a>
 </div>
 </body>
 </html>
