--- a/pagelet/feather/install.html
+++ b/pagelet/feather/install.html
@@ -6,7 +6,7 @@
 </ul>
 
 <pre class="code" data-type="shell" data-title="npm安装feather">
-npm install -g feather-plus
+npm install -g feather-s
 </pre>
 
 <p>feather的4条命令，分别为：server, release, install, init</p>
