--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>feather</title><link rel="stylesheet" href="/static/combine/235309aec1.css" type="text/css" /><script src="/static/js/feather.js?version=2b6071c"></script><script>require.config={"baseurl":"/static/js","rules":[[/^([^:]+)?\:((?:[^\/]+\/)*)((?:(?!\.js).)+?)(\.js)?$/,function (_0, _1, _2, _3, _4){                    return (_1 ? _1 + '/' : '') + 'mod/' + _2 + _3 + (_4 ? _4 : ('/' + _3 + '.js'));                }],[/^.+$/,function (all){                    return /\.([^\.]+)$/.test(all) ? all : (all + '.js');                }]],"charset":"utf-8","map":{},"deps":{},"domain":""}</script><script>require.mergeConfig({"map":{},"deps":{}})</script></head>
+<title>feather</title><link rel="stylesheet" href="/static/combine/235309aec1.css" type="text/css" /><script src="/static/js/feather.js?version=64bfcbe"></script><script>require.config={baseurl:"/static/js",rules:[[/^([^:]+)?\:((?:[^\/]+\/)*)((?:(?!\.js).)+?)(\.js)?$/,function(s,t,e,n,r){return(t?t+"/":"")+"mod/"+e+n+(r?r:"/"+n+".js")}],[/^.+$/,function(s){return/\.([^\.]+)$/.test(s)?s:s+".js"}]],charset:"utf-8",map:{},deps:{},domain:""};</script><script>require.mergeConfig({"map":{},"deps":{}})</script></head>
 
 <body>
 <div id="header">
@@ -8,8 +8,22 @@
 	<span class="desc">an industrialized framework for frontend baesd on <a href="http://github.com/fis" class="link">fis</a>. simple quick</span>
 </div>
 <div id="content">
-	<a class="project fs-24 color-white" href="page/feather.html">feather</a>
-	<a class="project fs-24 color-white" href="https://github.com/feather-ui/feather-ui">feather-ui</a>
+	<a class="project color-white" href="page/feather.html">
+		<span class="name fs-36">feather</span>
+		<span class="desc">an industrialized framework for frontend</span>
+	</a>
+	<a class="project color-white" href="https://github.com/feather-ui/featherjs">
+		<span class="name fs-36">featherjs</span>
+		<span class="desc">a module loader for frontend</span>
+	</a>
+	<a class="project color-white" href="https://github.com/feather-ui/feather-ui">
+		<span class="name fs-36">featherui</span>
+		<span class="desc">a ui library for frontend &nbsp;&nbsp;&nbsp;&nbsp;</span>
+	</a>
+	<a class="project color-white" href="https://github.com/feather-ui/feather_view">
+		<span class="name fs-36">feather-view</span>
+		<span class="desc">a template engine for php derive from feather</span>
+	</a>
 </div>
 </body>
 </html>
