--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>feather</title><link rel="stylesheet" href="/static/combine/235309aec1.css" type="text/css" /><script src="/static/js/feather.js?version=64bfcbe"></script><script>require.config={baseurl:"/static/js",rules:[[/^([^:]+)?\:((?:[^\/]+\/)*)((?:(?!\.js).)+?)(\.js)?$/,function(s,t,e,n,r){return(t?t+"/":"")+"mod/"+e+n+(r?r:"/"+n+".js")}],[/^.+$/,function(s){return/\.([^\.]+)$/.test(s)?s:s+".js"}]],charset:"utf-8",map:{},deps:{},domain:""};</script><script>require.mergeConfig({"map":{},"deps":{}})</script></head>
+<title>feather</title><link rel="stylesheet" href="/static/combine/235309aec1.css?version=b06c71a" type="text/css" /><script src="/static/js/feather.js?version=64bfcbe"></script><script>require.config={baseurl:"/static/js",rules:[[/^([^:]+)?\:((?:[^\/]+\/)*)((?:(?!\.js).)+?)(\.js)?$/,function(s,t,e,n,r){return(t?t+"/":"")+"mod/"+e+n+(r?r:"/"+n+".js")}],[/^.+$/,function(s){return/\.([^\.]+)$/.test(s)?s:s+".js"}]],charset:"utf-8",map:{},deps:{},domain:""};</script><script>require.mergeConfig({"map":{},"deps":{}})</script></head>
 
 <body>
 <div id="header">
