--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>feather</title><link rel="stylesheet" href="/static/combine/235309aec1.css?version=b06c71a" type="text/css" /><script src="/static/js/feather.js?version=64bfcbe"></script><script>require.config={baseurl:"/static/js",rules:[[/^([^:]+)?\:((?:[^\/]+\/)*)((?:(?!\.js).)+?)(\.js)?$/,function(s,t,a,e,r){return(t?t+"/":"")+"mod/"+a+e+(r?r:"/"+e+".js")}]],charset:"utf-8",map:{},deps:{},domain:""};</script><script>require.mergeConfig({"map":{},"deps":{}})</script></head>
+<title>feather</title><link rel="stylesheet" href="/static/combine/235309aec1.css?version=b06c71a" type="text/css" /><script src="/static/js/feather.js?version=64bfcbe"></script><script src="/static/js/feather.config.js?version=de77649"></script><script>require.mergeConfig({"map":{},"deps":{}})</script></head>
 
 <body>
 <div id="header">
@@ -16,7 +16,7 @@
 		<span class="name fs-36">featherjs</span>
 		<span class="desc">a module loader for frontend</span>
 	</a>
-	<a class="project color-white" href="https://github.com/feather-ui/feather-ui">
+	<a class="project color-white" href="page/ui.html">
 		<span class="name fs-36">feather-ui</span>
 		<span class="desc">a ui library for frontend &nbsp;&nbsp;&nbsp;&nbsp;</span>
 	</a>
