--- a/pagelet/feather/plugin.html
+++ b/pagelet/feather/plugin.html
@@ -1,10 +1,5 @@
-<script>require.mergeConfig({"map":{},"deps":{}})</script><p>feather会持续更新一些常见有用的插件</p>
+<script>require.mergeConfig({"map":{},"deps":{}})</script><p>feather会持续更新一些常见有用的插件</p><ul class="ul-list"><li>feather-postprocessor-inline-compress(内联样式以及script压缩):<pre data-type="html" data-title="xxx.html" class="code">
 
-<ul class="ul-list">
-	<li>
-		feather-postprocessor-inline-compress(内联样式以及script压缩):
-		<pre data-type="html" data-title="xxx.html" class="code">
-<!--这段代码不做压缩-->
 &lt;script>
 (function(window, undefined){
     console.log(window, undefined);
@@ -23,12 +18,7 @@
     font-size: 12px;
 }
 &lt;/style>
-		</pre>
-	</li>
-
-	<li>
-		less集成：feather中内置了less插件，任何css结尾的文件都可以使用less语法。
-		<pre class="code" data-type="css">
+		</pre></li><li>less集成：feather中内置了less插件，任何css结尾的文件都可以使用less语法。<pre class="code" data-type="css">
 a{
     &:hover{
         color: red;
@@ -38,11 +28,4 @@ a{
         display: inline-block;
     }
 }
-		</pre>
-	</li>
-
-	<li>
-		livereload功能内置：feather release -L即可
-	</li>
-</ul>
-
+		</pre></li><li>livereload功能内置：feather release -L即可</li></ul>
