--- a/index.html
+++ b/index.html
@@ -1,29 +1,1 @@
-<html>
-<head>
-<title>feather</title><link rel="stylesheet" href="/static/combine/235309aec1.css?version=b06c71a" type="text/css" /><script src="/static/js/feather.js?version=7360d99"></script><script src="/static/js/feather.config.js?version=35e0837"></script><script>require.mergeConfig({"map":{},"deps":{}})</script></head>
-
-<body>
-<div id="header">
-	<a class="title" href="https://github.com/feather-ui/feather" title="go to github">feather</a>
-	<span class="desc">an industrialized framework for frontend baesd on <a href="http://github.com/fis" class="link">fis</a>. simple quick</span>
-</div>
-<div id="content">
-	<a class="project color-white" href="page/feather.html">
-		<span class="name fs-36">feather</span>
-		<span class="desc">an industrialized framework for frontend</span>
-	</a>
-	<a class="project color-white" href="https://github.com/feather-ui/featherjs">
-		<span class="name fs-36">featherjs</span>
-		<span class="desc">a module loader for frontend</span>
-	</a>
-	<a class="project color-white" href="page/ui.html">
-		<span class="name fs-36">feather-ui</span>
-		<span class="desc">a ui library for frontend &nbsp;&nbsp;&nbsp;&nbsp;</span>
-	</a>
-	<a class="project color-white" href="https://github.com/feather-ui/feather_view">
-		<span class="name fs-36">feather-view</span>
-		<span class="desc">a template engine for php derive from feather</span>
-	</a>
-</div>
-</body>
-</html>
+<html><head><title>feather</title><link rel="stylesheet" href="/static/combine/235309aec1.css?version=b06c71a" type="text/css" /><script src="/static/js/feather.js?version=7360d99"></script><script src="/static/js/feather.config.js?version=35e0837"></script><script>require.mergeConfig({"map":{},"deps":{}})</script></head><body><div id="header"><a class="title" href="https://github.com/feather-ui/feather" title="go to github">feather</a> <span class="desc">an industrialized framework for frontend baesd on <a href="http://github.com/fis" class="link">fis</a>. simple quick</span></div><div id="content"><a class="project color-white" href="page/feather.html"><span class="name fs-36">feather</span> <span class="desc">an industrialized framework for frontend</span></a> <a class="project color-white" href="https://github.com/feather-ui/featherjs"><span class="name fs-36">featherjs</span> <span class="desc">a module loader for frontend</span></a> <a class="project color-white" href="page/ui.html"><span class="name fs-36">feather-ui</span> <span class="desc">a ui library for frontend &nbsp;&nbsp;&nbsp;&nbsp;</span></a> <a class="project color-white" href="https://github.com/feather-ui/feather_view"><span class="name fs-36">feather-view</span> <span class="desc">a template engine for php derive from feather</span></a></div></body></html>
