--- a/pagelet/feather/config.html
+++ b/pagelet/feather/config.html
@@ -1,6 +1,4 @@
-<script>require.mergeConfig({"map":{},"deps":{}})</script><p>feather_conf.js中的常用配置：</p>
-
-<pre class="code" data-type="js">
+<script>require.mergeConfig({"map":{},"deps":{}})</script><p>feather_conf.js中的常用配置：</p><pre class="code" data-type="js">
 feather.config.merge({
 	staticMode: true,	//开启静态资源内联模式
 	autoCombine: true, 	//开启静态资源内联模式后，使用autocombine可自动合并页面上的零散资源
