--- a/pagelet/feather/map.html
+++ b/pagelet/feather/map.html
@@ -1,6 +1,4 @@
-<script>require.mergeConfig({"map":{},"deps":{}})</script><p>项目上线之前需要后端的模版引擎配合加载map表，如果是非map表模式则不需要，后端可选择feather提供的模版引擎<a class="link" href="https://github.com/feather-ui/feather_view">feather_view</a>，也可以使用自己的模版引擎，如果使用自己的模版引擎需要实现3个接口和一个插件注入机制。</p>
-<p>在feather-view中，赋值和取值的接口分别为set和get，以及load方法，原型为：</p>
-<pre class="code" data-type="php">
+<script>require.mergeConfig({"map":{},"deps":{}})</script><p>项目上线之前需要后端的模版引擎配合加载map表，如果是非map表模式则不需要，后端可选择feather提供的模版引擎<a class="link" href="https://github.com/feather-ui/feather_view">feather_view</a>，也可以使用自己的模版引擎，如果使用自己的模版引擎需要实现3个接口和一个插件注入机制。</p><p>在feather-view中，赋值和取值的接口分别为set和get，以及load方法，原型为：</p><pre class="code" data-type="php">
 &lt;?php
 class Feather_View{
 	//....
@@ -18,10 +16,7 @@ class Feather_View{
 	}
 	//....
 }
-</pre>
-
-<p>选择使用自己模版引擎的项目，如果不支持这两个方法，可使用适配器模式解决</p>
-<pre class="code" data-type="php">
+</pre><p>选择使用自己模版引擎的项目，如果不支持这两个方法，可使用适配器模式解决</p><pre class="code" data-type="php">
 &lt;?php
 class AdapterTemplate extends OldTemplate{
 	public function set($key, $name = null){
@@ -37,10 +32,7 @@ class AdapterTemplate extends OldTemplate{
 		$this->display();
 	}
 }
-</pre>
-
-<p>另需要实现插件注入机制</p>
-<pre data-type="php" class="code">
+</pre><p>另需要实现插件注入机制</p><pre data-type="php" class="code">
 &lt;?php
 //此代码仅是示例，可自行选择合适的方式
 class AdapterTemplate extends OldTemplate{
@@ -72,10 +64,7 @@ $view->registerPlugins('feather_view_autoload_static', array(
 	'domain' => 'http://www.baidu.com',
 	'cache_dir' => 'a'
 ))
-</pre>
-
-<p>如果模版引擎本身就支持插件机制，则实现一个插件的适配即可</p>
-<pre data-type="php" class="code">
+</pre><p>如果模版引擎本身就支持插件机制，则实现一个插件的适配即可</p><pre data-type="php" class="code">
 &lt;?php
 function old_plugins(){
 	feather_view_autoload_static(/*参数*/);
