--- a/pagelet/feather/start.html
+++ b/pagelet/feather/start.html
@@ -53,7 +53,7 @@ alert(123);
 &lt;html>
 &lt;head>
 &lt;title>start&lt;/title> 
-
+<!--css文件会被自动放置head内-->
 &lt;link rel="stylesheet" href="/static/css/index.css" type="text/css"/>
 &lt;script src="/static/js/feather.js">&lt;/script>
 &lt;script type="text/javascript">require.config={"baseurl":"/static/js","rules":[[/^([^:]+)?\:((?:[^\/]+\/)*)((?:(?!\.js).)+?)(\.js)?$/,function (_0, _1, _2, _3, _4){                    return (_1 ? _1 + '/' : '') + 'mod/' + _2 + _3 + (_4 ? _4 : ('/' + _3 + '.js'));                }],[/^.+$/,function (all){                    return /\.([^\.]+)$/.test(all) ? all : (all + '.js');                }]],"charset":"utf-8","map":{},"deps":{},"domain":""}&lt;/script>    
@@ -62,7 +62,7 @@ alert(123);
 
 &lt;body>
 &lt;div>welcome to feather&lt;/div>
-
+<!--js文件会被自动放置body结束标签上面-->
 &lt;script src="/static/js/index.js">&lt;/script>
 &lt;/body>
 &lt;/html>
