--- a/pagelet/ui/class.html
+++ b/pagelet/ui/class.html
@@ -1,4 +1,5 @@
-<script>require.mergeConfig({"map":{"/static/js/mod/class/class.js?version=d8a399a":["/static/js/mod/class/class.js"],"/static/js/mod/jquery/jquery.js?version=f2f3c86":["/static/js/mod/jquery/jquery.js"]},"deps":{"/static/js/mod/class/class.js":["/static/js/mod/jquery/jquery.js"]}})</script><p>Class 类构造器</p><p>Class提供了一个简单的方式，让使用者可以创建自己的类，并支持多级继承，可调用父级方法等，让咱直接上代码吧！</p><script data-title="创建一个类" type="text/html">require.async(":class", function(Class){
+<script>require.mergeConfig({"map":{"/static/js/mod/class/class.js?version=d8a399a":["/static/js/mod/class/class.js"],"/static/js/mod/jquery/jquery.js?version=f2f3c86":["/static/js/mod/jquery/jquery.js"]},"deps":{"/static/js/mod/class/class.js":["/static/js/mod/jquery/jquery.js"]}})</script><p>Class 类构造器</p><p>Class提供了一个简单的方式，让使用者可以创建自己的类，并支持多级继承，可调用父级方法等，让咱直接上代码吧！</p><script data-title="创建一个类" type="text/html">
+require.async(":class", function(Class){
 	var A = Class({
 		name: 'aaa',
 
@@ -9,7 +10,9 @@
 
 	var a = new A;
 	alert(a.getName());	//aaa
-});</script><script data-title="initialize：构造函数" type="text/html">require.async(":class", function(Class){
+});
+</script><script data-title="initialize：构造函数" type="text/html">
+require.async(":class", function(Class){
 	var A = Class({
 		name: 'aaa',
 
@@ -25,7 +28,9 @@
 	var a = new A('bbb');
 	alert(a.getName());	//aaa
 	alert(A.prototype.name); //bbb
-});</script><script data-title="options参数以及setOptions方法" type="text/html">//setOptions方法为class内置的方法，class内置2个方法和一个属性，分别是setOptions，initialize 以及parent属性
+});
+</script><script data-title="options参数以及setOptions方法" type="text/html">
+//setOptions方法为class内置的方法，class内置2个方法和一个属性，分别是setOptions，initialize 以及parent属性
 //调用setOptions时，会自动设置类的options属性
 
 require.async(":class", function(Class){
@@ -55,7 +60,9 @@ require.async(":class", function(Class){
 		favs: ['c', 'd']
 	});
 	alert(b.getFavs());
-});</script><script data-title="extend方法，用于继承某个类" type="text/html">require.async(":class", function(Class){
+});
+</script><script data-title="extend方法，用于继承某个类" type="text/html">
+require.async(":class", function(Class){
 	var A = Class({
 		options: {
 			name: 'aaa',
@@ -90,7 +97,9 @@ require.async(":class", function(Class){
 		favs: ['c', 'd']
 	});
 	alert(b.getFavs());
-});</script><script data-title="parent属性，用于调用父级方法，parent同时也是类的一个内置的方法，可直接调用，调用时会直接调用父级intiailize方法" type="text/html">require.async(":class", function(Class){
+});
+</script><script data-title="parent属性，用于调用父级方法，parent同时也是类的一个内置的方法，可直接调用，调用时会直接调用父级intiailize方法" type="text/html">
+require.async(":class", function(Class){
 	var A = Class({
 		options: {
 			name: 'aaa',
@@ -132,4 +141,5 @@ require.async(":class", function(Class){
 		favs: ['c', 'd']
 	});
 	alert(b.getFavs());
-});</script>
+});
+</script>
