--- a/pagelet/ui/class.html
+++ b/pagelet/ui/class.html
@@ -1,4 +1,4 @@
-<script>require.mergeConfig({"map":{"/static/js/mod/class/class.js?version=d8a399a":["/static/js/mod/class/class.js"],"/static/js/mod/jquery/jquery.js?version=f2f3c86":["/static/js/mod/jquery/jquery.js"]},"deps":{"/static/js/mod/class/class.js":["/static/js/mod/jquery/jquery.js"]}})</script><p>Class 类构造器</p><p>Class提供了一个简单的方式，让使用者可以创建自己的类，并支持多级继承，可调用父级方法等，让咱直接上代码吧！</p><script data-title="创建一个类" type="text/html">
+<script>require.mergeConfig({"map":{"/static/mod/class/class.js?version=9e0ce51":["/static/mod/class/class.js"],"/static/mod/jquery/jquery.js?version=434ccc3":["/static/mod/jquery/jquery.js"]},"deps":{"/static/mod/class/class.js":["/static/mod/jquery/jquery.js"]}})</script><p>Class 类构造器</p><p>Class提供了一个简单的方式，让使用者可以创建自己的类，并支持多级继承，可调用父级方法等，让咱直接上代码吧！</p><script data-title="创建一个类" type="text/html">
 require.async(":class", function(Class){
 	var A = Class({
 		name: 'aaa',
