--- a/pagelet/feather/module.html
+++ b/pagelet/feather/module.html
@@ -3,7 +3,7 @@ feather init -m common feather-project-common
 </pre><p>返回feather-project目录下，编辑feather_conf.js</p><pre data-type="js" data-title="feather_conf.js" class="code">
 feather.config.merge({
 	project: {
-		ns: '',
+		name: '',
 		modulename: 'test',	//改为test子模块
 		charset: 'utf-8'
 	}
