--- a/pagelet/feather/pagelet.html
+++ b/pagelet/feather/pagelet.html
@@ -1,6 +1,6 @@
 <script>require.mergeConfig({"map":{},"deps":{}})</script><p>feather对pagelet的处理有2种，一种为正常的页面片段，用于ajax加载片段。另外一种为bigpipe或者bigrender所使用的需要后期处理封装才能使用的pagelet。</p><p>首先，ajax加载的正常的页面片段使用方式非常简单，首先在项目根目录下需要创建一个pagelet目录，然后创建一个pagelet，比如/pagelet/a/a.html:</p><pre data-type="html" class="code" data-title="/pagelet/a/a.html">
 <div>这是一个pagelet</div>
-</pre><p>然后分别创建/pagelet/a/a.css, /pagelet/a/a.js</p><p>修改index2.js</p><pre data-type="js" class="code" data-title="/static/js/index2.js">
+</pre><p>然后分别创建/pagelet/a/a.css, /pagelet/a/a.js</p><p>修改index2.js</p><pre data-type="js" class="code" data-title="/static/index/index2.js">
 require.async(':jquery', function($){
 	$('#pagelet_test').load('/pagelet/a/a.html');
 });
@@ -17,7 +17,7 @@ require.async(':jquery', function($){
 &lt;div>这是一个pagelet&lt;/div>
 </pre><pre data-type="html" class="code" data-title="编译后的a.html">
 &lt;!--FEATHER STATIC POSITION:HEAD-->  
-&lt;script type="text/javascript">require.mergeConfig({"map":{"/static/js/pagelet.js":["/static/js/pagelet.js"],"/static/pagelet/a/a.css":["/pagelet/a/a.css"],"/static/pagelet/a/a.js":["/pagelet/a/a.js"],"/static/css/index.css":["/static/css/index.css"],"/static/js/3.js":["/static/js/3.js"]},"deps":[],"domain":""})&lt;/script>
+&lt;script type="text/javascript">require.mergeConfig({"map":{"/static/pagelet.js":["/static/js/pagelet.js"],"/static/pagelet/a/a.css":["/pagelet/a/a.css"],"/static/pagelet/a/a.js":["/pagelet/a/a.js"],"/static/index/index.css":["/static/index/index.css"],"/static/3.js":["/static/3.js"]},"deps":[],"domain":""})&lt;/script>
 &lt;!--FEATHER STATIC POSITION END-->
 &lt;textarea id="_pagelet_a_a" style="display: none !important;" type="text/html">
 &lt;!--pagelet:test-->
@@ -25,7 +25,7 @@ require.async(':jquery', function($){
 &lt;/textarea>
 &lt;script>
 //feather会先加载对应的css资源，再显示html，然后再加载js。
-require.async(["/static/js/pagelet.js","/pagelet/a/a.css"],function(PageLet){PageLet("_pagelet_a_a","test","textarea");require.async("/pagelet/a/a.js")});
+require.async(["/static/pagelet.js","/pagelet/a/a.css"],function(PageLet){PageLet("_pagelet_a_a","test","textarea");require.async("/pagelet/a/a.js")});
 &lt;/script>&lt;!--FEATHER STATIC POSITION:BOTTOM--> &lt;!--FEATHER STATIC POSITION END-->
 </pre><pre data-type="html" class="code" data-title="/pagelet/a/a.html">
 &lt;!--pagelet:test:script-->
@@ -35,7 +35,7 @@ alert(12);
 &lt;div>这是一个pagelet&lt;/div>
 </pre><pre data-type="html" class="code" data-title="编译后的a.html">
 &lt;!--FEATHER STATIC POSITION:HEAD-->  
-&lt;script type="text/javascript">require.mergeConfig({"map":{"/static/js/pagelet.js":["/static/js/pagelet.js"],"/static/pagelet/a/a.css":["/pagelet/a/a.css"],"/static/pagelet/a/a.js":["/pagelet/a/a.js"],"/static/css/index.css":["/static/css/index.css"],"/static/js/3.js":["/static/js/3.js"]},"deps":[],"domain":""})&lt;/script>
+&lt;script type="text/javascript">require.mergeConfig({"map":{"/static/pagelet.js":["/static/pagelet.js"],"/static/pagelet/a/a.css":["/pagelet/a/a.css"],"/static/pagelet/a/a.js":["/pagelet/a/a.js"],"/static/index/index.css":["/static/index/index.css"],"/static/3.js":["/static/3.js"]},"deps":[],"domain":""})&lt;/script>
 &lt;!--FEATHER STATIC POSITION END-->
 &lt;script id="_pagelet_a_a" style="display: none !important;" type="text/html">
 &lt;!--pagelet:test:script-->
@@ -44,6 +44,6 @@ alert(12);
 &lt;/script>
 &lt;div>这是一个pagelet&lt;/div>
 &lt;/script>
-&lt;script>require.async(["/static/js/pagelet.js","/pagelet/a/a.css"],function(PageLet){PageLet("_pagelet_a_a","test","script");require.async("/pagelet/a/a.js")});&lt;/script>&lt;!--FEATHER STATIC POSITION:BOTTOM--> 
+&lt;script>require.async(["/static/pagelet.js","/pagelet/a/a.css"],function(PageLet){PageLet("_pagelet_a_a","test","script");require.async("/pagelet/a/a.js")});&lt;/script>&lt;!--FEATHER STATIC POSITION:BOTTOM--> 
 &lt;!--FEATHER STATIC POSITION END-->
 </pre><p>关于pagelet本地调试，暂时不支持单独调试，但是直接访问pagelet可看到编译后的源码，<span class="color-red">如果想调试的话，需要在父级页面使用ajax载入到页面中即可</span>。</p>
