--- a/pagelet/feather/require.html
+++ b/pagelet/feather/require.html
@@ -2,15 +2,15 @@
 &lt;html>
 &lt;head>
 &lt;title>index.phtml&lt;/title>
-&lt;link rel="stylesheet" type="text/css" href="/static/css/index.css" type="text/css">
+&lt;link rel="stylesheet" type="text/css" href="/static/index/index.css" type="text/css">
 &lt;/head>
  
 &lt;body>
 &lt;!--feather-position-fixed，则表示该js不会做移动处理，但是会自动添加域名和版本号之类-->
-&lt;script src="/static/js/index.js">&lt;/script>
+&lt;script src="/static/index/index.js">&lt;/script>
 &lt;script>
 //异步调用一个js文件
-require.async('/static/js/index2.js');
+require.async('/static/index/index2.js');
 &lt;/script>
 &lt;h1>welcome to feather&lt;/h1>
 &lt;/body>
@@ -19,70 +19,70 @@ require.async('/static/js/index2.js');
 &lt;html>
 &lt;head>
 &lt;title>index.phtml&lt;/title>
-&lt;link rel="stylesheet" href="/static/css/index.css" type="text/css" />
-&lt;script src="/static/js/feather.js">&lt;/script>
+&lt;link rel="stylesheet" href="/static/index/index.css" type="text/css" />
+&lt;script src="/static/feather.js">&lt;/script>
 &lt;script>require.config={"baseurl":"/static/js","rules":[[/^([^:]+)?\:((?:[^\/]+\/)*)((?:(?!\.js).)+?)(\.js)?$/,function (_0, _1, _2, _3, _4){                    return (_1 ? _1 + '/' : '') + 'mod/' + _2 + _3 + (_4 ? _4 : ('/' + _3 + '.js'));                }],[/^.+$/,function (all){                    return /\.([^\.]+)$/.test(all) ? all : (all + '.js');                }]],"charset":"utf-8","map":{},"deps":{},"domain":""}&lt;/script>
 &lt;script>
-require.mergeConfig({"map":{"/static/js/index2.js":["/static/js/index2.js"]},"deps":{}})
+require.mergeConfig({"map":{"/static/index/index2.js":["/static/index/index2.js"]},"deps":{}})
 &lt;/script>
 &lt;/head>
  
 &lt;body>
 &lt;script>
 //异步调用一个js文件
-require.async("/static/js/index2.js");
+require.async("/static/index/index2.js");
 &lt;/script>
 &lt;h1>welcome to feather&lt;/h1>
-&lt;script src="/static/js/index.js">&lt;/script>&lt;/body>
+&lt;script src="/static/index/index.js">&lt;/script>&lt;/body>
 &lt;/html>
 </pre><p>添加-m参数，再次编译后查看页面</p><pre class="code" data-type="html">
 &lt;html>
 &lt;head>
-&lt;title>index.phtml&lt;/title>&lt;link rel="stylesheet" href="/static/css/index_78be058.css" type="text/css" />&lt;script src="/static/js/feather_2b6071c.js">&lt;/script>&lt;script>require.config={"baseurl":"/static/js","rules":[[/^([^:]+)?\:((?:[^\/]+\/)*)((?:(?!\.js).)+?)(\.js)?$/,function (_0, _1, _2, _3, _4){                    return (_1 ? _1 + '/' : '') + 'mod/' + _2 + _3 + (_4 ? _4 : ('/' + _3 + '.js'));                }],[/^.+$/,function (all){                    return /\.([^\.]+)$/.test(all) ? all : (all + '.js');                }]],"charset":"utf-8","map":{},"deps":{},"domain":""}&lt;/script>
+&lt;title>index.phtml&lt;/title>&lt;link rel="stylesheet" href="/static/index/index_78be058.css" type="text/css" />&lt;script src="/static/feather_2b6071c.js">&lt;/script>&lt;script>require.config={"baseurl":"/static/js","rules":[[/^([^:]+)?\:((?:[^\/]+\/)*)((?:(?!\.js).)+?)(\.js)?$/,function (_0, _1, _2, _3, _4){                    return (_1 ? _1 + '/' : '') + 'mod/' + _2 + _3 + (_4 ? _4 : ('/' + _3 + '.js'));                }],[/^.+$/,function (all){                    return /\.([^\.]+)$/.test(all) ? all : (all + '.js');                }]],"charset":"utf-8","map":{},"deps":{},"domain":""}&lt;/script>
 &lt;script>
 //feather会自动编译，并将index2.js的正确地址指向添加过md5的index2.js的地址
-require.mergeConfig({"map":{"/static/js/index2_e50b9af.js":["/static/js/index2.js"]},"deps":{}})
+require.mergeConfig({"map":{"/static/index/index2_e50b9af.js":["/static/index/index2.js"]},"deps":{}})
 &lt;/script>&lt;/head>
  
 &lt;body>
 &lt;script>
 //异步调用一个js文件
-require.async("/static/js/index2.js");
+require.async("/static/index/index2.js");
 &lt;/script>
 &lt;h1>welcome to feather&lt;/h1>
-&lt;script src="/static/js/index_9e37717.js">&lt;/script>&lt;/body>
+&lt;script src="/static/index/index_9e37717.js">&lt;/script>&lt;/body>
 &lt;/html>
-</pre><p>feather中默认对require.config做了配置，require.baseurl会默认为static/js，所以对index2.js的引用也可以这么写</p><pre class="code" data-type="js">
-require.async('index2.js'); 
-</pre><p>feather中js模块化使用：<br />feather中创建一个js模块非常简单，只需要在将这个js文件放置于任意目录下的mod目录, 比如：/static/js/mod/a.js, /static/js/mod/b.js我们以第一个目录结构为例：<br /><span class="color-red">注：在feather中 创建一个模块时，不需要define头部，feather会自动为任意目录mod目录下的所有文件添加define头，当然你也可以添加，feather会不做任何处理。</span></p><p>在static/js目录下创建mod目录，并添加文件：</p><pre class="code" data-type="js" data-title="/static/js/mod/a.js">
+</pre><p>feather中默认对require.config做了配置，require.baseurl会默认为static，所以对index2.js的引用也可以这么写</p><pre class="code" data-type="js">
+require.async('index/index2.js'); 
+</pre><p>feather中js模块化使用：<br />feather中创建一个js模块非常简单，只需要在将这个js文件放置于任意目录下的mod目录, 比如：/static/mod/a.js, /static/mod/b.js我们以第一个目录结构为例：<br /><span class="color-red">注：在feather中 创建一个模块时，不需要define头部，feather会自动为任意目录mod目录下的所有文件添加define头，当然你也可以添加，feather会不做任何处理。</span></p><p>在static目录下创建mod目录，并添加文件：</p><pre class="code" data-type="js" data-title="/static/mod/a.js">
 var b = require('./b.js');
 module.exports = {
     callName: function(){
         return b.name;
     }
 }
-</pre><pre class="code" data-type="js" data-title="/static/js/mod/b.js">
+</pre><pre class="code" data-type="js" data-title="/static/mod/b.js">
 exports.name = 'b';
-</pre><pre class="code" data-type="js" data-title="/static/js/index2.js">
+</pre><pre class="code" data-type="js" data-title="/static/index/index2.js">
 alert(2);
 
-require.async('/static/js/mod/a.js', function(A){
+require.async('/static/mod/a.js', function(A){
     console.log(A.callName());
 });
 </pre><p>-m编译后查看源码</p><pre class="code" data-type="html">
 &lt;html>
 &lt;head>
-&lt;title>index.phtml&lt;/title>&lt;link rel="stylesheet" href="/static/css/index_78be058.css" type="text/css" />&lt;script src="/static/js/feather_2b6071c.js">&lt;/script>&lt;script>require.config={"baseurl":"/static/js","rules":[[/^([^:]+)?\:((?:[^\/]+\/)*)((?:(?!\.js).)+?)(\.js)?$/,function (_0, _1, _2, _3, _4){                    return (_1 ? _1 + '/' : '') + 'mod/' + _2 + _3 + (_4 ? _4 : ('/' + _3 + '.js'));                }],[/^.+$/,function (all){                    return /\.([^\.]+)$/.test(all) ? all : (all + '.js');                }]],"charset":"utf-8","map":{},"deps":{},"domain":""}&lt;/script>
+&lt;title>index.phtml&lt;/title>&lt;link rel="stylesheet" href="/static/index/index_78be058.css" type="text/css" />&lt;script src="/static/index/feather_2b6071c.js">&lt;/script>&lt;script>require.config={"baseurl":"/static/js","rules":[[/^([^:]+)?\:((?:[^\/]+\/)*)((?:(?!\.js).)+?)(\.js)?$/,function (_0, _1, _2, _3, _4){                    return (_1 ? _1 + '/' : '') + 'mod/' + _2 + _3 + (_4 ? _4 : ('/' + _3 + '.js'));                }],[/^.+$/,function (all){                    return /\.([^\.]+)$/.test(all) ? all : (all + '.js');                }]],"charset":"utf-8","map":{},"deps":{},"domain":""}&lt;/script>
 &lt;script>
 require.mergeConfig({
 	"map": {
-		"/static/js/index2_41f52ba.js": ["/static/js/index2.js"],
-		"/static/js/mod/a_0ae304d.js": ["/static/js/mod/a.js"],
-		"/static/js/mod/b_6149afc.js": ["/static/js/mod/b.js"]
+		"/static/index/index2_41f52ba.js": ["/static/index/index2.js"],
+		"/static/mod/a_0ae304d.js": ["/static/mod/a.js"],
+		"/static/mod/b_6149afc.js": ["/static/mod/b.js"]
 	},
 	"deps": {
 		//自动编译deps，加载a的同时也会加载b，以提升加载速度
-		"/static/js/mod/a.js": ["/static/js/mod/b.js"]
+		"/static/mod/a.js": ["/static/mod/b.js"]
 	}
 })
 &lt;/script>
@@ -92,37 +92,37 @@ require.mergeConfig({
 &lt;!--feather-position-fixed，则表示该js不会做移动处理，但是会自动添加域名和版本号之类-->
 &lt;script>
 //异步调用一个js文件
-require.async("/static/js/index2.js");
+require.async("/static/index/index2.js");
 &lt;/script>
 &lt;h1>welcome to feather&lt;/h1>
-&lt;script src="/static/js/index_9e37717.js">&lt;/script>&lt;/body>
+&lt;script src="/static/index/index_9e37717.js">&lt;/script>&lt;/body>
 &lt;/html>
-</pre><p>查看a和b的源码，发现不仅自动加上了define头，而且还将b的引用自动转成了全路径。</p><p>可以写一个配置，尝试将a和b合并后再次编译预览</p><p>js模块化的高级用法：feather提供了查找同名资源的功能，比如新增一个a.css</p><pre data-title="/static/js/mod/a.css" data-type="css" class="code">
+</pre><p>查看a和b的源码，发现不仅自动加上了define头，而且还将b的引用自动转成了全路径。</p><p>可以写一个配置，尝试将a和b合并后再次编译预览</p><p>js模块化的高级用法：feather提供了查找同名资源的功能，比如新增一个a.css</p><pre data-title="/static/mod/a.css" data-type="css" class="code">
 /*xxx*/
 </pre><p>再次编译后查看源码，会发现不仅加载了a.js，同时也加载了a.css</p><pre data-type="js" class="code">
 require.mergeConfig({
 	"map": {
-		"/static/js/index2_41f52ba.js": ["/static/js/index2.js"],
-		"/static/js/mod/a_0ae304d.js": ["/static/js/mod/a.js"],
-		"/static/js/mod/b_6149afc.js": ["/static/js/mod/b.js"],
-		"/static/js/mod/a_d41d8cd.css": ["/static/js/mod/a.css"]
+		"/static/index/index2_41f52ba.js": ["/static/index/index2.js"],
+		"/static/mod/a_0ae304d.js": ["/static/mod/a.js"],
+		"/static/mod/b_6149afc.js": ["/static/mod/b.js"],
+		"/static/mod/a_d41d8cd.css": ["/static/mod/a.css"]
 	},
 	"deps": {
-		"/static/js/mod/a.js": ["/static/js/mod/b.js", "/static/js/mod/a.css"]
+		"/static/mod/a.js": ["/static/mod/b.js", "/static/mod/a.css"]
 	}
 })
 </pre><p>feather.js本身是支持rules的规则匹配，而feather中做了一个默认的配置：</p><pre data-type="js" data-title="feather内置的配置文件" class="code">
 require: {
     config: {
-        baseurl: '/static/js',
+        baseurl: '/static',
         rules: [
             /*
-            :dialog => /static/js/mod/dialog/dialog.js
-            common:dialog => /static/js/common/mod/dialog/dialog.js
-            common/a:dialog => /static/js/common/a/mod/dialog/dialog.js
-            common/a:dialog/a => /static/js/common/a/mod/dialog/a/a.js
-            common/a:dialog/a.js => /static/js/common/a/mod/dialog/a.js
-            common/a.js => /static/js/common/a.js
+            :dialog => /static/mod/dialog/dialog.js
+            common:dialog => /static/common/mod/dialog/dialog.js
+            common/a:dialog => /static/common/a/mod/dialog/dialog.js
+            common/a:dialog/a => /static/common/a/mod/dialog/a/a.js
+            common/a:dialog/a.js => /static/common/a/mod/dialog/a.js
+            common/a.js => /static/common/a.js
             */
             [/^([^:]+)?\:((?:[^\/]+\/)*)((?:(?!\.js).)+?)(\.js)?$/, function(_0, _1, _2, _3, _4){
                 return (_1 ? _1 + '/' : '') + 'mod/' + _2 + _3 + (_4 ? _4 : ('/' + _3 + '.js'));
@@ -130,7 +130,7 @@ require: {
         ]
     }
 }
-</pre><p>所以我们在indexe2.js中可以这么写：</p><pre data-type="js" data-title="/static/js/index2.js" class="code">
+</pre><p>所以我们在indexe2.js中可以这么写：</p><pre data-type="js" data-title="/static/index/index2.js" class="code">
 require.async(':a.js');
 </pre><p>当然我们也可以重新这个配置</p><pre data-type="js" data-title="feather_conf.js" class="code">
 feather.config.set('require.config.rules', [
@@ -138,6 +138,6 @@ feather.config.set('require.config.rules', [
 		return 'mod/' + all + '.js'
 	}]
 ]);
-</pre><pre class="code" data-type="js" data-title="/static/js/index2.js">
+</pre><pre class="code" data-type="js" data-title="/static/index/index2.js">
 require.async('a');
 </pre><p class="color-red">另外除了规则后，require.async也支持相对路径调用，值得注意的是，在某一个文件中require.async的相对路径是相对于当前文件。</p>
