--- a/pagelet/feather/start.html
+++ b/pagelet/feather/start.html
@@ -19,12 +19,12 @@ feather init -c utf-8 feather-project	#项目utf-8编码
 </pre><pre class="code" data-type="js" data-title="feather_conf.js">
 feather.config.merge({
 	project: {
-		ns: '',
+		name: '',
 		modulename: '',
 		charset: 'utf-8'
 	}
 });
-</pre><p>可以打开本地调试服务器 访问http://127.0.0.1:8080 查看效果，默认页面地址为http://127.0.0.1:8080/page/index.html</p><p>请增加一个css和js文件，并在index.html中引用</p><pre class="code" data-type="css" data-title="/static/css/index.css">
+</pre><p>可以打开本地调试服务器 访问http://127.0.0.1:8080 查看效果，默认页面地址为http://127.0.0.1:8080/page/index.html</p><p>请增加一个css和js文件，并在index.html中引用</p><pre class="code" data-type="css" data-title="/static/index/index.css">
 *{
 	padding: 0px;
 	margin: 0px;
@@ -35,14 +35,14 @@ div{
 	border: 1px solid #ccc;
 	font-size: 24px;
 }
-</pre><pre class="code" data-type="js" data-title="/static/js/index.js">
+</pre><pre class="code" data-type="js" data-title="/static/index/index.js">
 alert(123);
 </pre><pre class="code" data-type="html" data-title="/page/index.html">
 &lt;html>
 &lt;head>
 &lt;title>start&lt;/title>
-&lt;link rel="stylesheet" type="text/css" href="/static/css/index.css" />
-&lt;script src="/static/js/index.js">&lt;/script>
+&lt;link rel="stylesheet" type="text/css" href="/static/index/index.css" />
+&lt;script src="/static/index/index.js">&lt;/script>
 &lt;/head>
 
 &lt;body>
@@ -54,8 +54,8 @@ alert(123);
 &lt;head>
 &lt;title>start&lt;/title> 
 <!--css文件会被自动放置head内-->
-&lt;link rel="stylesheet" href="/static/css/index.css" type="text/css"/>
-&lt;script src="/static/js/feather.js">&lt;/script>
+&lt;link rel="stylesheet" href="/static/index/index.css" type="text/css"/>
+&lt;script src="/static/feather.js">&lt;/script>
 &lt;script type="text/javascript">require.config={"baseurl":"/static/js","rules":[[/^([^:]+)?\:((?:[^\/]+\/)*)((?:(?!\.js).)+?)(\.js)?$/,function (_0, _1, _2, _3, _4){                    return (_1 ? _1 + '/' : '') + 'mod/' + _2 + _3 + (_4 ? _4 : ('/' + _3 + '.js'));                }],[/^.+$/,function (all){                    return /\.([^\.]+)$/.test(all) ? all : (all + '.js');                }]],"charset":"utf-8","map":{},"deps":{},"domain":""}&lt;/script>    
 &lt;script type="text/javascript">require.mergeConfig({"map":[],"deps":[]})&lt;/script>    
  &lt;/head>
@@ -63,13 +63,13 @@ alert(123);
 &lt;body>
 &lt;div>welcome to feather&lt;/div>
 <!--js文件会被自动放置body结束标签上面-->
-&lt;script src="/static/js/index.js">&lt;/script>
+&lt;script src="/static/index/index.js">&lt;/script>
 &lt;/body>
 &lt;/html>
 </pre><p>执行feather release --dest ../dest查看产出后的文件包的所有文件，以及文件内的内容</p><p>如果想让所有的静态资源的链接直接内嵌在html文件中，我们可以尝试使用非map表管理静态资源的方式，修改feather_conf.js进行配置</p><pre class="code" data-type="js" data-title="/feather_conf.js">
 feather.config.merge({
 	project: {
-		ns: '',
+		name: '',
 		modulename: '',
 		charset: 'utf-8'
 	},
