--- a/pagelet/ui/template.html
+++ b/pagelet/ui/template.html
@@ -1,12 +1,16 @@
-<script>require.mergeConfig({"map":{"/static/mod/template/template.js?version=a10e777":["/static/mod/template/template.js"]},"deps":{}})</script><p>Template 模版引擎</p><p>使用方法：</p><ul class="ul-list"><li>模版设置:<script type="text/html" data-type="show">
+<script>require.mergeConfig({"map":{"/static/common/mod/template/template.js?version=e0316fb":["/static/common/mod/template/template.js"]},"deps":{}})</script><p>Template 模版引擎</p><p>使用方法：</p><ul class="ul-list"><li>fetch(domId): fetch用于快速获取一个元素内容，并返回执行后的结果<script type="text/html" data-type="none" id="test">
+	<%list.forEach(function(item){%>
+		<p><%=item.name%></p>
+	<%});%>
+	</script><script class="code" type="text/html" data-type="show">
 <script type="text/html" id="test">
 	<%list.forEach(function(item){%>
 		<p><%=item.name%></p>
 	<%});%>
-</ script>
-		</script></li><li>模版渲染:<script type="text/html" data-type="show">
-require.async(":template",function(Template) {
-	Template.fetch("test", {
+<\/script>
+		</script><script type="text/html">
+require.async("common:template",function(Template) {
+	var content = Template.fetch("test", {
 	  	list: [
 		    {
 		      name: '123'
@@ -17,5 +21,7 @@ require.async(":template",function(Template) {
 		    }
 	  	]
 	});
+
+	alert(content);
 })
-		</script></li></ul>
+		</script></li><li>parse(string): 直接执行一段字符串后返回结果</li></ul>
