--- a/pagelet/ui/alert.html
+++ b/pagelet/ui/alert.html
@@ -1,9 +1,19 @@
-<script>require.mergeConfig({"map":{"/static/mod/alert/alert.js?version=ce3982b":["/static/mod/alert/alert.js"],"/static/mod/dialog/dialog.js?version=10fefe8":["/static/mod/dialog/dialog.js"],"/static/mod/jquery/jquery.js?version=434ccc3":["/static/mod/jquery/jquery.js"],"/static/mod/mask/mask.js?version=0ba4ca4":["/static/mod/mask/mask.js"],"/static/mod/mask/mask.css?version=e33fb8c":["/static/mod/mask/mask.css"],"/static/mod/dialog/dialog.css?version=1f0e909":["/static/mod/dialog/dialog.css"],"/static/mod/alert/alert.css?version=819428c":["/static/mod/alert/alert.css"]},"deps":{"/static/mod/alert/alert.js":["/static/mod/dialog/dialog.js","/static/mod/alert/alert.css"],"/static/mod/dialog/dialog.js":["/static/mod/jquery/jquery.js","/static/mod/mask/mask.js","/static/mod/dialog/dialog.css"],"/static/mod/mask/mask.js":["/static/mod/jquery/jquery.js","/static/mod/mask/mask.css"]}})</script><p>Alert 警告插件</p><p>方法列表：</p><ul class="ul-list"><li>alert:<script data-title="" type="text/html">
-require.async(":alert", function(Alert){
+<script>require.mergeConfig({"map":{"/static/common/mod/alert/alert.js?version=2774d1f":["/static/common/mod/alert/alert.js"],"/static/common/mod/dialog/dialog.js?version=8c755d7":["/static/common/mod/dialog/dialog.js"],"/static/common/mod/jquery/jquery.js?version=c57faf4":["/static/common/mod/jquery/jquery.js"],"/static/common/mod/mask/mask.js?version=a804b4a":["/static/common/mod/mask/mask.js"],"/static/common/mod/mask/mask.css?version=e33fb8c":["/static/common/mod/mask/mask.css"],"/static/common/mod/dialog/dialog.css?version=03c3b5d":["/static/common/mod/dialog/dialog.css"],"/static/common/mod/alert/alert.css?version=ccad22b":["/static/common/mod/alert/alert.css"]},"deps":{"/static/common/mod/alert/alert.js":["/static/common/mod/dialog/dialog.js","/static/common/mod/alert/alert.css"],"/static/common/mod/dialog/dialog.js":["/static/common/mod/jquery/jquery.js","/static/common/mod/mask/mask.js","/static/common/mod/dialog/dialog.css"],"/static/common/mod/mask/mask.js":["/static/common/mod/jquery/jquery.js","/static/common/mod/mask/mask.css"]}})</script><p>Alert 警告插件</p><p>方法列表：</p><ul class="ul-list"><li>alert(content[, dialogOptions]): content为显示的内容，dialogOptions同传递给dialog的参数，因alert是继承于dialog插件的。<script data-title="" type="text/html">
+require.async("common:alert", function(Alert){
 	Alert.alert('简单Alert提示');
 })	
-		</script></li><li>confirm(content[, callback, unclose]);<script data-title="" type="text/html">
-require.async(":alert", function(Alert){
-	Alert.confirm('带回调的提示框',function(){alert("确定"),false});
+		</script><script data-title="" type="text/html">
+require.async("common:alert", function(Alert){
+	Alert.alert('使用自定义的title', {
+		title: '哈哈哈哈'
+	});
+})	
+		</script></li><li>confirm(content[, callback, unclose, dialogOptions])：callback为点击确定后的回调， unclose可手动控制是否关闭。<script data-title="" type="text/html">
+require.async("common:alert", function(Alert){
+	Alert.confirm('带回调的提示框', function(){
+		alert("确定")
+	}, false, {
+		title: '带回调的提示框'
+	});
 })	
 		</script></li></ul>
