--- a/pagelet/ui/dialog.html
+++ b/pagelet/ui/dialog.html
@@ -1,16 +1,30 @@
-<script>require.mergeConfig({"map":{"/static/mod/dialog/dialog.js?version=10fefe8":["/static/mod/dialog/dialog.js"],"/static/mod/jquery/jquery.js?version=434ccc3":["/static/mod/jquery/jquery.js"],"/static/mod/mask/mask.js?version=0ba4ca4":["/static/mod/mask/mask.js"],"/static/mod/mask/mask.css?version=e33fb8c":["/static/mod/mask/mask.css"],"/static/mod/dialog/dialog.css?version=1f0e909":["/static/mod/dialog/dialog.css"]},"deps":{"/static/mod/dialog/dialog.js":["/static/mod/jquery/jquery.js","/static/mod/mask/mask.js","/static/mod/dialog/dialog.css"],"/static/mod/mask/mask.js":["/static/mod/jquery/jquery.js","/static/mod/mask/mask.css"]}})</script><p>Dialog 弹出框插件</p><p>参数列表：</p><ul class="ul-list"><li>title: 显示的标题，如果设置成false，则不会出现关闭按钮，整个dialog将会没有头部<script data-title="" type="text/html">
-require.async(":dialog", function(Dialog){
+<script>require.mergeConfig({"map":{"/static/common/mod/dialog/dialog.js?version=8c755d7":["/static/common/mod/dialog/dialog.js"],"/static/common/mod/jquery/jquery.js?version=c57faf4":["/static/common/mod/jquery/jquery.js"],"/static/common/mod/mask/mask.js?version=a804b4a":["/static/common/mod/mask/mask.js"],"/static/common/mod/mask/mask.css?version=e33fb8c":["/static/common/mod/mask/mask.css"],"/static/common/mod/dialog/dialog.css?version=03c3b5d":["/static/common/mod/dialog/dialog.css"]},"deps":{"/static/common/mod/dialog/dialog.js":["/static/common/mod/jquery/jquery.js","/static/common/mod/mask/mask.js","/static/common/mod/dialog/dialog.css"],"/static/common/mod/mask/mask.js":["/static/common/mod/jquery/jquery.js","/static/common/mod/mask/mask.css"]}})</script><p>Dialog 弹出框插件</p><p>参数列表：</p><ul class="ul-list"><li>title: 显示的标题，如果设置成false，则不会出现关闭按钮，整个dialog将会没有头部<script data-title="" type="text/html">
+require.async("common:dialog", function(Dialog){
 	new Dialog({
+		esc: true,
 		title: false,
 		autoOpen: true,
-		content: $('<div>111111111111111</div>'),
+		content: $('<div>按esc关闭我</div>'),
 		close: function(){
 			this.destory();
 		}
 	});
 });
-		</script></li><li>container: dialog生成在哪个元素中，默认为document.body</li><li>dom: 将该dom直接插入到dialog中</li><li>width: 宽度</li><li>height: 高度</li><li>content: 显示的内容</li><li>url: ajax加载数据的url</li><li>esc: 是否按下esc键后关闭，默认为false</li><li>mask: 是否遮罩，默认为true</li><li>autoOpen: 是否自动打开，默认false</li><li>buttons：按钮列表<script data-title="" type="text/html">
-require.async(":dialog", function(Dialog){
+		</script></li><li>container: dialog生成在哪个元素中，默认为document.body<script data-title="" type="text/html">
+require.async("common:dialog", function(Dialog){
+	new Dialog({
+		esc: true,
+		container: '#container_test',
+		title: '我在一个div中',
+		autoOpen: true,
+		content: $('<div>按esc关闭我</div>'),
+		close: function(){
+			this.destory();
+		}
+	});
+});
+		</script><div id="container_test" style="border: 1px solid #000; width: 600px; height: 500px;"></div></li><li>dom: 将该dom直接插入到dialog中</li><li>width: 宽度</li><li>height: 高度</li><li>content: 显示的内容</li><li>url: ajax加载数据的url</li><li>esc: 是否按下esc键后关闭，默认为false</li><li>mask: 是否遮罩，默认为true</li><li>autoOpen: 是否自动打开，默认false</li><li>buttons：按钮列表<script data-title="" type="text/html">
+require.async("common:dialog", function(Dialog){
 	new Dialog({
 		title: 'hahahaha',
 		autoOpen: true,
@@ -30,7 +44,7 @@ require.async(":dialog", function(Dialog){
 					}
 				},
 
-				classname: 'class1 class2'
+				className: 'class1 class2'
 			},
 
 			'取消': function(){
@@ -43,4 +57,4 @@ require.async(":dialog", function(Dialog){
 		}
 	});
 });
-		</script></li><li>handle: 指定一个元素，当点击该元素时，打开dialog</li><li>open：打开时触发的事件</li><li>firstOpen：第一次打开时触发的事件</li><li>close：关闭时触发的事件</li></ul><p>方法列表：</p><ul class="ul-list"><li>setTitle(title): 设置title参数</li><li>reset(): 手动将dialog的位置设置为居中</li><li>open(): 打开dialog</li><li>close(): 关闭dialog</li><li>destory(): 销毁当前dialog</li></ul>
+		</script></li><li>handle: 指定一个元素，当点击该元素时，打开dialog</li><li>open：打开时触发的事件</li><li>firstOpen：第一次打开时触发的事件</li><li>close：关闭时触发的事件</li></ul><p>方法列表：</p><ul class="ul-list"><li>setTitle(title): 设置title参数</li><li>setContent(content): 动态设置内容，content可为字符串或者dom元素。</li><li>load(url): 动态加载数据，同首次传递参数中的url参数使用。</li><li>resetPosition(): 手动将dialog的位置设置为居中</li><li>open(): 打开dialog</li><li>close(): 关闭dialog</li><li>destroy(): 销毁当前dialog</li></ul>
