--- a/pagelet/ui/tips.html
+++ b/pagelet/ui/tips.html
@@ -1,37 +1,37 @@
-<script>require.mergeConfig({"map":{"/static/mod/tips/tips.js?version=372850a":["/static/mod/tips/tips.js"],"/static/mod/jquery/jquery.js?version=434ccc3":["/static/mod/jquery/jquery.js"],"/static/mod/mask/mask.js?version=0ba4ca4":["/static/mod/mask/mask.js"],"/static/mod/mask/mask.css?version=e33fb8c":["/static/mod/mask/mask.css"],"/static/mod/dialog/dialog.js?version=10fefe8":["/static/mod/dialog/dialog.js"],"/static/mod/dialog/dialog.css?version=1f0e909":["/static/mod/dialog/dialog.css"],"/static/mod/tips/tips.css?version=6830efb":["/static/mod/tips/tips.css"]},"deps":{"/static/mod/tips/tips.js":["/static/mod/jquery/jquery.js","/static/mod/mask/mask.js","/static/mod/dialog/dialog.js","/static/mod/tips/tips.css"],"/static/mod/mask/mask.js":["/static/mod/jquery/jquery.js","/static/mod/mask/mask.css"],"/static/mod/dialog/dialog.js":["/static/mod/jquery/jquery.js","/static/mod/mask/mask.js","/static/mod/dialog/dialog.css"]}})</script><p>Tips 提示插件</p><p>参数列表：</p><ul class="ul-list"><li>content: 提示内容</li><li>mask: 是否显示遮罩<script data-title="" type="text/html">
-require.async(":tips", function(Tips){
+<script>require.mergeConfig({"map":{"/static/common/mod/tips/tips.js?version=9a8154a":["/static/common/mod/tips/tips.js"],"/static/common/mod/jquery/jquery.js?version=c57faf4":["/static/common/mod/jquery/jquery.js"],"/static/common/mod/mask/mask.js?version=a804b4a":["/static/common/mod/mask/mask.js"],"/static/common/mod/mask/mask.css?version=e33fb8c":["/static/common/mod/mask/mask.css"],"/static/common/mod/dialog/dialog.js?version=8c755d7":["/static/common/mod/dialog/dialog.js"],"/static/common/mod/dialog/dialog.css?version=03c3b5d":["/static/common/mod/dialog/dialog.css"],"/static/common/mod/tips/tips.css?version=816842c":["/static/common/mod/tips/tips.css"]},"deps":{"/static/common/mod/tips/tips.js":["/static/common/mod/jquery/jquery.js","/static/common/mod/mask/mask.js","/static/common/mod/dialog/dialog.js","/static/common/mod/tips/tips.css"],"/static/common/mod/mask/mask.js":["/static/common/mod/jquery/jquery.js","/static/common/mod/mask/mask.css"],"/static/common/mod/dialog/dialog.js":["/static/common/mod/jquery/jquery.js","/static/common/mod/mask/mask.js","/static/common/mod/dialog/dialog.css"]}})</script><p>Tips 提示插件</p><p>参数列表：</p><ul class="ul-list"><li>content: 提示内容</li><li>mask: 是否显示遮罩<script data-title="" type="text/html">
+require.async("common:tips", function(Tips){
 	new Tips({
-	  content: '123',
+	  content: '<p style="text-align: center; width: 300px;">2秒后自动关闭</p>',
 	  mask: true,     
-	  timeout: false  
+	  timeout: 2000
 	});
 });
-		</script></li><li><li>timeout: 自动关闭（手动关闭设置false）<script data-title="" type="text/html">
-require.async(":tips", function(Tips){
+		</script></li><li>timeout: 自动关闭（手动关闭设置false）<script data-title="" type="text/html">
+require.async("common:tips", function(Tips){
 	new Tips({
 	  content: '2秒自动关闭',
 	  mask: true,     
 	  timeout: 2000  
 	});
 });
-		</script></li></ul><p>方法列表：</p><ul class="ul-list"><li>destory(): 销毁Tips对象</li></ul><p>快捷方法：</p><ul class="ul-list"><li>Tips.fuc(content[, timeout, mask, classname]);</li><li>show<script data-title="" type="text/html">
-require.async(":tips", function(Tips){
+		</script></li></ul><p>方法列表：</p><ul class="ul-list"><li>destroy(): 销毁Tips对象，不自动关闭情况下可使用该方法销毁对象</li></ul><p>快捷方法：</p><ul class="ul-list"><li>Tips.fuc(content[, timeout, mask, classname]);</li><li>show：new Tips的静态调用方法<script data-title="" type="text/html">
+require.async("common:tips", function(Tips){
 	Tips.show('show', 3000, true, 'ui-tips-error');
 })		
 		</script></li><li>error<script data-title="" type="text/html">
-require.async(":tips", function(Tips){
+require.async("common:tips", function(Tips){
 	Tips.error('error', 3000, true);
 })		
 		</script></li><li>success<script data-title="" type="text/html">
-require.async(":tips", function(Tips){
+require.async("common:tips", function(Tips){
 	Tips.success('success', 3000, true);
 })		
 		</script></li><li>loading<script data-title="" type="text/html">
-require.async(":tips", function(Tips){
+require.async("common:tips", function(Tips){
 	Tips.loading('loading', 3000, true);
 })		
 		</script></li><li>warn<script data-title="" type="text/html">
-require.async(":tips", function(Tips){
+require.async("common:tips", function(Tips){
 	Tips.warn('warn', 3000, true);
 })		
 		</script></li></ul>
