--- a/pagelet/feather/pagelet.html
+++ b/pagelet/feather/pagelet.html
@@ -1,4 +1,4 @@
-<script>require.mergeConfig({"map":{},"deps":{}})</script><p>feather对pagelet的处理有2种，一种为正常的页面片段，用于ajax加载片段。另外一种为bigpipe或者bigrender所使用的需要后期处理封装才能使用的pagelet。</p><p>首先，ajax加载的正常的页面片段使用方式非常简单，首先在项目根目录下需要创建一个pagelet目录，然后创建一个pagelet，比如/pagelet/a/a.html:</p><pre data-type="html" class="code" data-title="/pagelet/a/a.html">
+<!--FEATHER STATIC POSITION:HEAD--><?php $this->load('/component/resource/usestyle.html', $this->get('FEATHER_USE_STYLES'));$this->load('/component/resource/usescript.html', $this->get('FEATHER_USE_HEAD_SCRIPTS'));?><!--FEATHER STATIC POSITION END--><p>feather对pagelet的处理有2种，一种为正常的页面片段，用于ajax加载片段。另外一种为bigpipe或者bigrender所使用的需要后期处理封装才能使用的pagelet。</p><p>首先，ajax加载的正常的页面片段使用方式非常简单，首先在项目根目录下需要创建一个pagelet目录，然后创建一个pagelet，比如/pagelet/a/a.html:</p><pre data-type="html" class="code" data-title="/pagelet/a/a.html">
 <div>这是一个pagelet</div>
 </pre><p>然后分别创建/pagelet/a/a.css, /pagelet/a/a.js</p><p>修改index2.js</p><pre data-type="js" class="code" data-title="/static/index/index2.js">
 require.async(':jquery', function($){
@@ -46,4 +46,4 @@ alert(12);
 &lt;/script>
 &lt;script>require.async(["/static/pagelet.js","/pagelet/a/a.css"],function(PageLet){PageLet("_pagelet_a_a","test","script");require.async("/pagelet/a/a.js")});&lt;/script>&lt;!--FEATHER STATIC POSITION:BOTTOM--> 
 &lt;!--FEATHER STATIC POSITION END-->
-</pre><p>关于pagelet本地调试，暂时不支持单独调试，但是直接访问pagelet可看到编译后的源码，<span class="color-red">如果想调试的话，需要在父级页面使用ajax载入到页面中即可</span>。</p>
+</pre><p>关于pagelet本地调试，暂时不支持单独调试，但是直接访问pagelet可看到编译后的源码，<span class="color-red">如果想调试的话，需要在父级页面使用ajax载入到页面中即可</span>。</p><!--FEATHER STATIC POSITION:BOTTOM--><?php $this->load('/component/resource/usescript.html', $this->get('FEATHER_USE_BOTTOM_SCRIPTS'));?><!--FEATHER STATIC POSITION END-->
