--- a/pagelet/feather/uri.html
+++ b/pagelet/feather/uri.html
@@ -1,4 +1,4 @@
-<script>require.mergeConfig({"map":{},"deps":{}})</script><p>资源定位是feather从fis中继承过来的3种能力之一，在之前的文档中其实已经有使用到，比如url自动添加domain，版本号等，都属于资源定位，资源定位还有一些其他用法，比如：</p><pre class="code" data-type="js">
+<!--FEATHER STATIC POSITION:HEAD--><?php $this->load('/component/resource/usestyle.html', $this->get('FEATHER_USE_STYLES'));$this->load('/component/resource/usescript.html', $this->get('FEATHER_USE_HEAD_SCRIPTS'));?><!--FEATHER STATIC POSITION END--><p>资源定位是feather从fis中继承过来的3种能力之一，在之前的文档中其实已经有使用到，比如url自动添加domain，版本号等，都属于资源定位，资源定位还有一些其他用法，比如：</p><pre class="code" data-type="js">
 //配置config，产出的所有的静态资源的baseurl都变为/a/b/c/d
 feather.config.set('statics', '/a/b/c/d');	//默认为/static
 //   /static/1.js => /a/b/c/d/1.js
@@ -16,4 +16,4 @@ img.src = '/a/b/c/d/1.png';
 </pre><p>另外，feather对__uri进行了一次扩展，让__uri支持第2个，3个参数，分别为 useHash? useDomain? 默认2个值都为true</p><pre class="code" data-type="js">
 var img = new Image;
 img.src = __uri('/static/1.png', true, false);	//只加md5值，不加domain值
-</pre>
+</pre><!--FEATHER STATIC POSITION:BOTTOM--><?php $this->load('/component/resource/usescript.html', $this->get('FEATHER_USE_BOTTOM_SCRIPTS'));?><!--FEATHER STATIC POSITION END-->
