--- a/pagelet/feather/component.html
+++ b/pagelet/feather/component.html
@@ -1,4 +1,4 @@
-<script>require.mergeConfig({"map":{},"deps":{}})</script><p>feather中内置了一个模版引擎，支持调用component，PHP语法等，如果项目上线不想使用feather的模版引擎，只需要实现2个接口，以及插件注入机制即可。</p><p class="color-red">注：使用component需要关闭staticMode功能</p><p>首先我们将index.html拆分3部分： header部分（整站公用头，包含公用样式和结构之类）， footer部分（整站底部，包含统计代码等），page的部分（咱还叫index.html)</p><pre data-type="php" data-title="/component/header.html" class="code">
+<!--FEATHER STATIC POSITION:HEAD--><?php $this->load('/component/resource/usestyle.html', $this->get('FEATHER_USE_STYLES'));$this->load('/component/resource/usescript.html', $this->get('FEATHER_USE_HEAD_SCRIPTS'));?><!--FEATHER STATIC POSITION END--><p>feather中内置了一个模版引擎，支持调用component，PHP语法等，如果项目上线不想使用feather的模版引擎，只需要实现2个接口，以及插件注入机制即可。</p><p class="color-red">注：使用component需要关闭staticMode功能</p><p>首先我们将index.html拆分3部分： header部分（整站公用头，包含公用样式和结构之类）， footer部分（整站底部，包含统计代码等），page的部分（咱还叫index.html)</p><pre data-type="php" data-title="/component/header.html" class="code">
 &lt;html>
 &lt;head>
 &lt;title>&lt;?=$title?>&lt;/title>
@@ -99,4 +99,4 @@ template: {
 feather.config.set('template.componentRules', [
 	//重写的规则
 ]);
-</pre><p class="color-red">另外除了规则后，component的调用和require.async一样，也支持相对路径调用。</p>
+</pre><p class="color-red">另外除了规则后，component的调用和require.async一样，也支持相对路径调用。</p><!--FEATHER STATIC POSITION:BOTTOM--><?php $this->load('/component/resource/usescript.html', $this->get('FEATHER_USE_BOTTOM_SCRIPTS'));?><!--FEATHER STATIC POSITION END-->
