--- a/pagelet/feather/deps.html
+++ b/pagelet/feather/deps.html
@@ -1,4 +1,4 @@
-<script>require.mergeConfig({"map":{},"deps":{}})</script><p>声明依赖是feather从fis中继承过来的3种能力之一，在之前的文档中，已经有练习过，比如使用require这样的语法，会被自动收集至require列表中</p><p>如果我们没有使用require等这样的模块化加载工具，如果引入依赖呢？这就要依靠我们强大的依赖声明功能了</p><p>在html中可以这么使用：</p><pre class="code" data-type="html">
+<!--FEATHER STATIC POSITION:HEAD--><?php $this->load('/component/resource/usestyle.html', $this->get('FEATHER_USE_STYLES'));$this->load('/component/resource/usescript.html', $this->get('FEATHER_USE_HEAD_SCRIPTS'));?><!--FEATHER STATIC POSITION END--><p>声明依赖是feather从fis中继承过来的3种能力之一，在之前的文档中，已经有练习过，比如使用require这样的语法，会被自动收集至require列表中</p><p>如果我们没有使用require等这样的模块化加载工具，如果引入依赖呢？这就要依靠我们强大的依赖声明功能了</p><p>在html中可以这么使用：</p><pre class="code" data-type="html">
 &lt;!--
 @require /static/1.css
 @require /static/1.js
@@ -21,4 +21,4 @@
 &lt;img src="/static/1.png" />
 &lt;script src="/static/2.js">&lt;/script>
 &lt;script src="/static/1.js">&lt;/script>
-</pre><p>css中的使用和js中一致</p>
+</pre><p>css中的使用和js中一致</p><!--FEATHER STATIC POSITION:BOTTOM--><?php $this->load('/component/resource/usescript.html', $this->get('FEATHER_USE_BOTTOM_SCRIPTS'));?><!--FEATHER STATIC POSITION END-->
