--- a/pagelet/feather/plugin.html
+++ b/pagelet/feather/plugin.html
@@ -1,4 +1,4 @@
-<script>require.mergeConfig({"map":{},"deps":{}})</script><p>feather会持续更新一些常见有用的插件</p><ul class="ul-list"><li>feather-postprocessor-inline-compress(内联样式以及script压缩):<pre data-type="html" data-title="xxx.html" class="code">
+<!--FEATHER STATIC POSITION:HEAD--><?php $this->load('/component/resource/usestyle.html', $this->get('FEATHER_USE_STYLES'));$this->load('/component/resource/usescript.html', $this->get('FEATHER_USE_HEAD_SCRIPTS'));?><!--FEATHER STATIC POSITION END--><p>feather会持续更新一些常见有用的插件</p><ul class="ul-list"><li>feather-postprocessor-inline-compress(内联样式以及script压缩):<pre data-type="html" data-title="xxx.html" class="code">
 <!--这段代码不做压缩-->
 &lt;script>
 (function(window, undefined){
@@ -28,4 +28,4 @@ a{
         display: inline-block;
     }
 }
-		</pre></li><li>livereload功能内置：feather release -L即可</li></ul>
+		</pre></li><li>livereload功能内置：feather release -L即可</li></ul><!--FEATHER STATIC POSITION:BOTTOM--><?php $this->load('/component/resource/usescript.html', $this->get('FEATHER_USE_BOTTOM_SCRIPTS'));?><!--FEATHER STATIC POSITION END-->
