--- a/pagelet/feather/sprite.html
+++ b/pagelet/feather/sprite.html
@@ -1,4 +1,4 @@
-<script>require.mergeConfig({"map":{},"deps":{}})</script><p>feather中的sprite功能会对合并的css自动启用</p><pre class="code" data-type="js">
+<!--FEATHER STATIC POSITION:HEAD--><?php $this->load('/component/resource/usestyle.html', $this->get('FEATHER_USE_STYLES'));$this->load('/component/resource/usescript.html', $this->get('FEATHER_USE_HEAD_SCRIPTS'));?><!--FEATHER STATIC POSITION END--><p>feather中的sprite功能会对合并的css自动启用</p><pre class="code" data-type="js">
 feather.config.set('pack', {
 	'static/combine.css': 'static/**.css'
 });
@@ -16,4 +16,4 @@ a{
 i{
 	background: url(/static/3.png?__sprite);
 }
-</pre><p>如果有其他特殊，或者更详细的具体需求，可见<a class="link" target="_blank" href="https://github.com/fex-team/fis-spriter-csssprites">fis-spriter-csssprites</a></p></p>
+</pre><p>如果有其他特殊，或者更详细的具体需求，可见<a class="link" target="_blank" href="https://github.com/fex-team/fis-spriter-csssprites">fis-spriter-csssprites</a></p></p><!--FEATHER STATIC POSITION:BOTTOM--><?php $this->load('/component/resource/usescript.html', $this->get('FEATHER_USE_BOTTOM_SCRIPTS'));?><!--FEATHER STATIC POSITION END-->
