--- a/pagelet/ui/mask.html
+++ b/pagelet/ui/mask.html
@@ -1,8 +1,8 @@
-<script>require.mergeConfig({"map":{"/static/common/mod/mask/mask.js?version=a804b4a":["/static/common/mod/mask/mask.js"],"/static/common/mod/jquery/jquery.js?version=c57faf4":["/static/common/mod/jquery/jquery.js"],"/static/common/mod/mask/mask.css?version=e33fb8c":["/static/common/mod/mask/mask.css"]},"deps":{"/static/common/mod/mask/mask.js":["/static/common/mod/jquery/jquery.js","/static/common/mod/mask/mask.css"]}})</script><p id="maskDemo">Mask 遮罩插件</p><p>参数列表：</p><ul class="ul-list"><li>container: dom选择器<script data-title="" type="text/html">
+<!--FEATHER STATIC POSITION:HEAD--><?php $this->load('/component/resource/usestyle.html', $this->get('FEATHER_USE_STYLES'));$this->load('/component/resource/usescript.html', $this->get('FEATHER_USE_HEAD_SCRIPTS'));?><!--FEATHER STATIC POSITION END--><p id="maskDemo">Mask 遮罩插件</p><p>参数列表：</p><ul class="ul-list"><li>container: dom选择器<script data-title="" type="text/html">
 require.async("common:mask", function(Mask){
 	window.mask = new Mask({
 	  autoOpen:true,
 	  container: "#maskDemo"
 	}).open();
 });
-		</script></li></ul><p>方法列表：</p><ul class="ul-list"><li>open(): 打开遮罩</li><li>close(): 关闭遮罩</li><li>destroy(): 销毁对象</li><li>resetPosition(): 重新设置mask的位置和大小</li></ul>
+		</script></li></ul><p>方法列表：</p><ul class="ul-list"><li>open(): 打开遮罩</li><li>close(): 关闭遮罩</li><li>destroy(): 销毁对象</li><li>resetPosition(): 重新设置mask的位置和大小</li></ul><!--FEATHER STATIC POSITION:BOTTOM--><?php $this->load('/component/resource/usescript.html', $this->get('FEATHER_USE_BOTTOM_SCRIPTS'));?><!--FEATHER STATIC POSITION END-->
