--- a/pagelet/ui/tips.html
+++ b/pagelet/ui/tips.html
@@ -1,4 +1,4 @@
-<script>require.mergeConfig({"map":{"/static/common/mod/tips/tips.js?version=9a8154a":["/static/common/mod/tips/tips.js"],"/static/common/mod/jquery/jquery.js?version=c57faf4":["/static/common/mod/jquery/jquery.js"],"/static/common/mod/mask/mask.js?version=a804b4a":["/static/common/mod/mask/mask.js"],"/static/common/mod/mask/mask.css?version=e33fb8c":["/static/common/mod/mask/mask.css"],"/static/common/mod/dialog/dialog.js?version=8c755d7":["/static/common/mod/dialog/dialog.js"],"/static/common/mod/dialog/dialog.css?version=03c3b5d":["/static/common/mod/dialog/dialog.css"],"/static/common/mod/tips/tips.css?version=816842c":["/static/common/mod/tips/tips.css"]},"deps":{"/static/common/mod/tips/tips.js":["/static/common/mod/jquery/jquery.js","/static/common/mod/mask/mask.js","/static/common/mod/dialog/dialog.js","/static/common/mod/tips/tips.css"],"/static/common/mod/mask/mask.js":["/static/common/mod/jquery/jquery.js","/static/common/mod/mask/mask.css"],"/static/common/mod/dialog/dialog.js":["/static/common/mod/jquery/jquery.js","/static/common/mod/mask/mask.js","/static/common/mod/dialog/dialog.css"]}})</script><p>Tips 提示插件</p><p>参数列表：</p><ul class="ul-list"><li>content: 提示内容</li><li>mask: 是否显示遮罩<script data-title="" type="text/html">
+<!--FEATHER STATIC POSITION:HEAD--><?php $this->load('/component/resource/usestyle.html', $this->get('FEATHER_USE_STYLES'));$this->load('/component/resource/usescript.html', $this->get('FEATHER_USE_HEAD_SCRIPTS'));?><!--FEATHER STATIC POSITION END--><p>Tips 提示插件</p><p>参数列表：</p><ul class="ul-list"><li>content: 提示内容</li><li>mask: 是否显示遮罩<script data-title="" type="text/html">
 require.async("common:tips", function(Tips){
 	new Tips({
 	  content: '<p style="text-align: center; width: 300px;">2秒后自动关闭</p>',
@@ -34,4 +34,4 @@ require.async("common:tips", function(Tips){
 require.async("common:tips", function(Tips){
 	Tips.warn('warn', 3000, true);
 })		
-		</script></li></ul>
+		</script></li></ul><!--FEATHER STATIC POSITION:BOTTOM--><?php $this->load('/component/resource/usescript.html', $this->get('FEATHER_USE_BOTTOM_SCRIPTS'));?><!--FEATHER STATIC POSITION END-->
