--- a/pagelet/ui/class.html
+++ b/pagelet/ui/class.html
@@ -1,4 +1,4 @@
-<!--FEATHER STATIC POSITION:HEAD--><?php $this->load('/component/resource/usestyle.html', $this->get('FEATHER_USE_STYLES'));$this->load('/component/resource/usescript.html', $this->get('FEATHER_USE_HEAD_SCRIPTS'));?><!--FEATHER STATIC POSITION END--><p>Class 类构造器</p><p>Class提供了一个简单的方式，让使用者可以创建自己的类，并支持多级继承，可调用父级方法等，让咱直接上代码吧！</p><script data-title="创建一个类" type="text/html">
+<script>require.mergeConfig({"map":{"/static/common/mod/class/class.js?version=fdf765c":["/static/common/mod/class/class.js"],"/static/common/mod/jquery/jquery.js?version=c57faf4":["/static/common/mod/jquery/jquery.js"]},"deps":{"/static/common/mod/class/class.js":["/static/common/mod/jquery/jquery.js"]},"css":[]})</script><p>Class 类构造器</p><p>Class提供了一个简单的方式，让使用者可以创建自己的类，并支持多级继承，可调用父级方法等，让咱直接上代码吧！</p><script data-title="创建一个类" type="text/html">
 require.async("common:class", function(Class){
 	var A = Class({
 		name: 'aaa',
@@ -142,4 +142,4 @@ require.async("common:class", function(Class){
 	});
 	alert(b.getFavs());
 });
-</script><!--FEATHER STATIC POSITION:BOTTOM--><?php $this->load('/component/resource/usescript.html', $this->get('FEATHER_USE_BOTTOM_SCRIPTS'));?><!--FEATHER STATIC POSITION END-->
+</script>
