--- a/pagelet/feather/embed.html
+++ b/pagelet/feather/embed.html
@@ -1,4 +1,4 @@
-<!--FEATHER STATIC POSITION:HEAD--><?php $this->load('/component/resource/usestyle.html', $this->get('FEATHER_USE_STYLES'));$this->load('/component/resource/usescript.html', $this->get('FEATHER_USE_HEAD_SCRIPTS'));?><!--FEATHER STATIC POSITION END--><p>内容嵌入是feather从fis中继承过来的3种能力之一</p><p>在html和css中的用法一致，比如:</p><pre class="code" data-type="html">
+<script>require.mergeConfig({"map":{},"deps":{},"css":[]})</script><p>内容嵌入是feather从fis中继承过来的3种能力之一</p><p>在html和css中的用法一致，比如:</p><pre class="code" data-type="html">
 &lt;!--该图片的内容会以base64的方式引入进img标签中-->
 &lt;img src="/static/1.png?__inline" />
 
@@ -23,4 +23,4 @@ div{
 var div = document.createElement('div');
 div.innerHTML = __inline('/static/1.txt');	//将1.txt的内容赋给div的innerhtml属性
 document.body.appendChild(div);
-</pre><!--FEATHER STATIC POSITION:BOTTOM--><?php $this->load('/component/resource/usescript.html', $this->get('FEATHER_USE_BOTTOM_SCRIPTS'));?><!--FEATHER STATIC POSITION END-->
+</pre>
