--- a/pagelet/feather/name.html
+++ b/pagelet/feather/name.html
@@ -1,6 +1,6 @@
-<!--FEATHER STATIC POSITION:HEAD--><?php $this->load('/component/resource/usestyle.html', $this->get('FEATHER_USE_STYLES'));$this->load('/component/resource/usescript.html', $this->get('FEATHER_USE_HEAD_SCRIPTS'));?><!--FEATHER STATIC POSITION END--><p>feather中的项目下可以划分很多模块，模块可指定为一些互相独立的业务。</p><p>feather中指定一个项目名很简单，可在init时指定，也可直接修改feather_conf.js</p><pre data-type="js" data-title="/feather_conf.js" class="code">
+<script>require.mergeConfig({"map":{},"deps":{},"css":[]})</script><p>feather中的项目下可以划分很多模块，模块可指定为一些互相独立的业务。</p><p>feather中指定一个项目名很简单，可在init时指定，也可直接修改feather_conf.js</p><pre data-type="js" data-title="/feather_conf.js" class="code">
 feather.config.set('project.name', 'aa');
 </pre><p>指定一个项目名后，开发者可以根据项目名来识别当前处于哪个项目的哪个模块开发，很清晰。</p><p>另feather已取消release后会多创建一层项目名的目录结构，如果静态资源的baseurl有需要，可自行配置statics配置，比如：</p><pre class="code" data-type="js">
 feather.config.set('statics', '/a/b/c/d');	//默认为/static，所以生成后的url开头为/static/xxx
 //如果配置了此项，比如开发目录有/static/1.js，则release后，产出url会自动变为/a/b/c/d/1.js
-</pre><!--FEATHER STATIC POSITION:BOTTOM--><?php $this->load('/component/resource/usescript.html', $this->get('FEATHER_USE_BOTTOM_SCRIPTS'));?><!--FEATHER STATIC POSITION END-->
+</pre>
