--- a/pagelet/feather/static.html
+++ b/pagelet/feather/static.html
@@ -1,4 +1,4 @@
-<!--FEATHER STATIC POSITION:HEAD--><?php $this->load('/component/resource/usestyle.html', $this->get('FEATHER_USE_STYLES'));$this->load('/component/resource/usescript.html', $this->get('FEATHER_USE_HEAD_SCRIPTS'));?><!--FEATHER STATIC POSITION END--><p>创建一个index2.js文件</p><pre class="code" data-type="js" data-title="/static/index/index2.js">
+<script>require.mergeConfig({"map":{},"deps":{},"css":[]})</script><p>创建一个index2.js文件</p><pre class="code" data-type="js" data-title="/static/index/index2.js">
 alert(2);
 </pre><p>如果我想将index.js放置页面顶部，而index2.js放置页面底部，该怎么做？试试下面代码：</p><pre class="code" data-type="html" data-title="/page/index.html">
 &lt;html>
@@ -38,4 +38,4 @@ paffe.config.set('pack', {
 });
 </pre><p>feather同时还提供了 预览调试时会加载的文件，而且正式产出后不会被收集的配置, 方便本地调试时使用</p><pre data-type="html" class="code">
 &lt;script src="/static/index/index.js" feather-dest-ignore>&lt;/script>
-</pre><p>feather对css文件的位置处理只有fixed和head两种，默认为head。</p><p class="color-red">关于页面静态资源合并打包，可配置autoCombine配置，注：该配置在staticMode开启的时候才会生效</p><!--FEATHER STATIC POSITION:BOTTOM--><?php $this->load('/component/resource/usescript.html', $this->get('FEATHER_USE_BOTTOM_SCRIPTS'));?><!--FEATHER STATIC POSITION END-->
+</pre><p>feather对css文件的位置处理只有fixed和head两种，默认为head。</p><p class="color-red">关于页面静态资源合并打包，可配置autoCombine配置，注：该配置在staticMode开启的时候才会生效</p>
