--- a/pagelet/ui/tabs.html
+++ b/pagelet/ui/tabs.html
@@ -1,4 +1,4 @@
-<!--FEATHER STATIC POSITION:HEAD--><?php $this->load('/component/resource/usestyle.html', $this->get('FEATHER_USE_STYLES'));$this->load('/component/resource/usescript.html', $this->get('FEATHER_USE_HEAD_SCRIPTS'));?><!--FEATHER STATIC POSITION END--><p>Tabs 切换插件</p><p>参数列表：</p><ul class="ul-list"><li>dom:需要设置tab的dom元素（通常是a标签）</li><li>attr:元素的获取target标识的属性</li><li>currentClass:给选中的tab设置class</li><br/><div id="tabDomOne" class="tabDom"><a href="javascript:;" style="border-right:1px solid #E1E1E1">Page One</a><a href="javascript:;">Page Two</a></div><script data-title="" type="text/html" data-type="noclick">
+<script>require.mergeConfig({"map":{"/static/common/mod/tabs/tabs.js?version=f8b544b":["/static/common/mod/tabs/tabs.js"],"/static/common/mod/jquery/jquery.js?version=c57faf4":["/static/common/mod/jquery/jquery.js"]},"deps":{"/static/common/mod/tabs/tabs.js":["/static/common/mod/jquery/jquery.js"]},"css":[]})</script><p>Tabs 切换插件</p><p>参数列表：</p><ul class="ul-list"><li>dom:需要设置tab的dom元素（通常是a标签）</li><li>attr:元素的获取target标识的属性</li><li>currentClass:给选中的tab设置class</li><br/><div id="tabDomOne" class="tabDom"><a href="javascript:;" style="border-right:1px solid #E1E1E1">Page One</a><a href="javascript:;">Page Two</a></div><script data-title="" type="text/html" data-type="noclick">
 require.async("common:tabs", function(Tabs){
 	new Tabs({
 	  dom: '#tabDomOne a',
@@ -26,4 +26,4 @@ require.async("common:tabs", function(Tabs){
 	  callback: function(index){alert("切换后的回调函数, 当前index为" + index)}
 	});
 });
-	</script></ul><!--FEATHER STATIC POSITION:BOTTOM--><?php $this->load('/component/resource/usescript.html', $this->get('FEATHER_USE_BOTTOM_SCRIPTS'));?><!--FEATHER STATIC POSITION END-->
+	</script></ul>
