--- a/pagelet/ui/tooltip.html
+++ b/pagelet/ui/tooltip.html
@@ -1,4 +1,4 @@
-<!--FEATHER STATIC POSITION:HEAD--><?php $this->load('/component/resource/usestyle.html', $this->get('FEATHER_USE_STYLES'));$this->load('/component/resource/usescript.html', $this->get('FEATHER_USE_HEAD_SCRIPTS'));?><!--FEATHER STATIC POSITION END--><p>Tooltip提示框</p><p>参数列表：</p><ul class="ul-list"><li>dom: 需要绑定tooltip的元素<br /><a href="javascript:void(0);" id="tooltip-options-dom" class="link">hover me</a><script data-type="noclick" type="text/html">
+<script>require.mergeConfig({"map":{"/static/common/mod/tooltip/tooltip.js?version=cd25b32":["/static/common/mod/tooltip/tooltip.js"],"/static/common/mod/jquery/jquery.js?version=c57faf4":["/static/common/mod/jquery/jquery.js"],"/static/common/mod/tooltip/tooltip.css?version=14f8a60":["/static/common/mod/tooltip/tooltip.css"]},"deps":{"/static/common/mod/tooltip/tooltip.js":["/static/common/mod/jquery/jquery.js","/static/common/mod/tooltip/tooltip.css"]},"css":[]})</script><p>Tooltip提示框</p><p>参数列表：</p><ul class="ul-list"><li>dom: 需要绑定tooltip的元素<br /><a href="javascript:void(0);" id="tooltip-options-dom" class="link">hover me</a><script data-type="noclick" type="text/html">
 require.async("common:tooltip", function(ToolTip){
 	new ToolTip({
 		dom: '#tooltip-options-dom',
@@ -41,4 +41,4 @@ require.async("common:tooltip", function(ToolTip){
 		pos: 'left-bottom'
 	});
 });
-		</script></li><li>offset: 指定偏移值，该值是向指定的坐标的方向偏移，比如指定bottom，offset为正值，则tooltip的位置会更向下，如果是bottom right,则会向2个方向加上坐标值</li><li>className: 指定一个classname，可自定义自己的样式</li></ul><p>方法列表：</p><ul class="ul-list"><li>setContent(content): 动态设置一个content</li><li>show(): 显示</li><li>hide(): 隐藏</li><li>toggle(): 动态切换隐藏还是显示</li><li>setPos(pos): 动态一个坐标位置，同options里的pos参数，可选值top|right|left|bottom|top left|top right|right bottom|left bottom</li></ul><!--FEATHER STATIC POSITION:BOTTOM--><?php $this->load('/component/resource/usescript.html', $this->get('FEATHER_USE_BOTTOM_SCRIPTS'));?><!--FEATHER STATIC POSITION END-->
+		</script></li><li>offset: 指定偏移值，该值是向指定的坐标的方向偏移，比如指定bottom，offset为正值，则tooltip的位置会更向下，如果是bottom right,则会向2个方向加上坐标值</li><li>className: 指定一个classname，可自定义自己的样式</li></ul><p>方法列表：</p><ul class="ul-list"><li>setContent(content): 动态设置一个content</li><li>show(): 显示</li><li>hide(): 隐藏</li><li>toggle(): 动态切换隐藏还是显示</li><li>setPos(pos): 动态一个坐标位置，同options里的pos参数，可选值top|right|left|bottom|top left|top right|right bottom|left bottom</li></ul>
